feat: Implementação de role no entidade de usuarios
